crux-mir-comp/test/symb_eval/comp/spec_struct.good
test spec_struct/<DISAMB>::f_test[0]: ok
test spec_struct/<DISAMB>::use_f[0]: FAILED

failures:

---- spec_struct/<DISAMB>::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:41:9: 41:79 !test/symb_eval/comp/spec_struct.rs:51:5: 51:29: error: in spec_struct/<DISAMB>::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/spec_struct.rs:51:5:
[Crux]   	d < 10

[Crux] Overall status: Invalid.
